--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 	<body>
 		<div class="main">
 			<header>
-				<h1><b><font color="#FFFFFF">2</font><font color="#FF7F00">buds</font><font color="#FFFFFF">1</font><font color="#FF7F00">shroom</font></b></h1>
-				<h2>Mental Health. <br>Psychedelic Therapy. <br> Resources & Research. <br></h2>
-			<!-- 	<h3><font color="#FFFF00">Other big CSGO Projects are in the Works!</font></h3> -->
+				<h1><b><font color="#FFFFFF">🍃2</font><font color="#00FF00">buds</font><font color="#FFFFFF">1</font><font color="#FF7F00">shroom🍄</font></b></h1>
+				<h2><font color="#FFFFFF">Mental Health. <br>Psychedelic Therapy. <br> Resources & Research. <br> Harm Prevention.</font><br></h2>
+				<h3><font color="#FFFFFF">These tools should be used with intention.</font></h3>
 			</header>
 			<nav>
-				<a href="https://discord.gg/aj7g8US6ET"><button class="button"><b>Join our Discord</b></button></a>
-				<a href="https://paypal.me/2buds1shroom"><button class="button"><b>Donate via PayPal</b></button></a>
+				<a href="https://discord.gg/aj7g8US6ET"><button class="button"><b>Join Our Discord</b></button></a>
+				<!-- <a href="https://paypal.me/2buds1shroom"><button class="button"><b>Support PayPal (coming soon)</b></button></a> -->
 			</nav>
 			<footer>
-				<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> - <a href="mailto:2buds1shroom@gmail.com">Email Us</a></p>
+				<p><font color="#FFFFFF">Copyright &copy; <script>document.write(new Date().getFullYear())</script> -</font> <a href="mailto:2buds1shroom@gmail.com">Email Us</a></p>
 			</footer>
 		</div>
 <!--		<div class="video">
