Updated Podcast Lang

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<div class="main">
 			<header>
 				<h1><b><font color="#FFFFFF">🍃2</font><font color="#00FF00">buds</font><font color="#FFFFFF">1</font><font color="#FF7F00">shroom🍄</font></b></h1>
+				<h2><font color="#FFFF00">A Soon to be Released Podcast</font></h2>
 				<h2><font color="#FFFFFF">Mental Health. <br>Psychedelic Therapy. <br> Resources & Research. <br> Harm Prevention.</font><br></h2>
 				<h3><font color="#FFFFFF">These tools should be used with intention.</font></h3>
 			</header>
