Updated with yellow

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta property="og:title" content="2 Buds, 1 Shroom">
-		<meta property="og:description" content="2 Buds, 1 Shroom || Mental Health. Psychedelics Therapy with Intention. ">
+		<meta property="og:description" content="2 Buds, 1 Shroom || Mental Health. Psychedelic. Medicines used as Tools. Therapy with Intention. ">
 		<meta property="og:url" content="https://2buds1shroom.com/">
 		<title>2 Buds, 1 Shroom || Mental Health. Psychedelic Therapy with Intention.</title>
 		<link rel="stylesheet" href="style.css">
@@ -15,8 +15,8 @@
 			<header>
 				<h1><b><font color="#FFFFFF">🍃2</font><font color="#00FF00">buds</font><font color="#FFFFFF">1</font><font color="#FF7F00">shroom🍄</font></b></h1>
 				<h2><font color="#FFFF00">A Soon to be Released Podcast</font></h2>
-				<h2><font color="#FFFFFF">Mental Health. <br>Psychedelic Therapy. <br> Resources & Research. <br> Harm Prevention.</font><br></h2>
-				<h3><font color="#FFFFFF">These tools should be used with intention.</font></h3>
+				<h2><font color="#FFFFFF">Mental Health. <br>Psychedelic Therapy. <br> Resources & Research. <br> Harm Prevention. <br> Medicine with Intention.</font><br></h2>
+				<h3><font color="#FFFF00">These are powerful tools. Change your life carefully.</font></h3>
 			</header>
 			<nav>
 				<a href="https://discord.gg/aj7g8US6ET"><button class="button"><b>Join Our Discord</b></button></a>
