--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<h3><font color="#FFFF00">These are powerful tools. Change your life carefully.</font></h3>
 			</header>
 			<nav>
-				<a href="https://discord.gg/aj7g8US6ET"><button class="button"><b>Join Our Discord</b></button></a>
+				<a href="https://discord.gg/Pmkg3EVrjr"><button class="button"><b>Join Our Discord</b></button></a>
 				<!-- <a href="https://paypal.me/2buds1shroom"><button class="button"><b>Support PayPal (coming soon)</b></button></a> -->
 			</nav>
 			<footer>
