--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			</header>
 			<nav>
 				<a href="https://discord.gg/Pmkg3EVrjr"><button class="button"><b>Join Our Discord</b></button></a>
+				<a href="https://www.reddit.com/r/2buds1shroom"><button class="button"><b>Join Our Reddit</b></button></a>
 				<!-- <a href="https://paypal.me/2buds1shroom"><button class="button"><b>Support PayPal (coming soon)</b></button></a> -->
 			</nav>
 			<footer>
