Adding Quick Links, Color Changes, Button Renames

--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
 			</header>
 			<nav>
 				<a href="https://discord.gg/Pmkg3EVrjr"><button class="button"><b>Join Our Discord</b></button></a>
-				<a href="https://www.reddit.com/r/2buds1shroom"><button class="button"><b>Join Our Reddit</b></button></a><br><br>
-				<h2><font color="#FFFF00">Spotify Psilocybin Trip Lists</font></h2>
-				<a href="https://open.spotify.com/playlist/3DfL9joUe2MwJDwjGRUki6?si=931772d3ab394e3c"><button class="button2"><b>Playlist: Low Vocalization (first 45 minutes)</b></button></a>
-				<a href="https://open.spotify.com/playlist/3G6qu3ptpDTTQoQpjNyAwW?si=355deea55d304338"><button class="button2"><b>Playlist: Peak Emotion for "The Trip" (minute 45 to 180)</b></button></a>
-				<a href="https://open.spotify.com/playlist/0sjCLbRF3diUkufd9xn5eq?si=1092239c3aa24fe0"><button class="button2"><b>Playlist: The Comedown (minute 181+)</b></button></a><br>
-				<a href="https://www.reddit.com/r/2buds1shroom/comments/1713dpx/2buds1shroom_spotify_lists_music_for_psilocybin/"><button class="button3"><b>Info About Trip Lists</b></button></a>
+				<a href="https://www.reddit.com/r/2buds1shroom"><button class="button"><b>Join Our Reddit</b></button></a><br>
+				<h3><font color="#FFFF00">Discord Quick Links:</font></h3>
+				<a href="https://discord.gg/ctQdvePZRd"><button class="button-discord"><b>#vitamin-d🌞</b></button></a>
+				<a href="https://discord.gg/SEk5aQMpc7"><button class="button-discord"><b>#magnesium🔋</b></button></a>
+				<a href="https://discord.gg/TNvB2UkH6y"><button class="button-discord"><b>#ketamine💧therapy</b></button></a>
+				<a href="https://discord.gg/VMpw7YCJHb"><button class="button-discord"><b>#psilocybin🍄</b></button></a>
+				
+				<h3><font color="#FFFF00">Spotify 🍄Psilocybin Trip Lists</font></h3>
+				<a href="https://open.spotify.com/playlist/3DfL9joUe2MwJDwjGRUki6?si=931772d3ab394e3c"><button class="button-spotify"><b>Low Vocalization (first 45 minutes)</b></button></a><br>
+				<a href="https://open.spotify.com/playlist/3G6qu3ptpDTTQoQpjNyAwW?si=355deea55d304338"><button class="button-spotify"><b>Peak Emotion for "The Trip" (minute 45 to 180)</b></button></a><br>
+				<a href="https://open.spotify.com/playlist/0sjCLbRF3diUkufd9xn5eq?si=1092239c3aa24fe0"><button class="button-spotify"><b>The Comedown (minute 181+)</b></button></a><br>
+				<a href="https://www.reddit.com/r/2buds1shroom/comments/1713dpx/2buds1shroom_spotify_lists_music_for_psilocybin/"><button class="button-info"><b>Info About Trip Lists</b></button></a>
 				<!-- <a href="https://paypal.me/2buds1shroom"><button class="button"><b>Support PayPal (coming soon)</b></button></a> -->
 			</nav>
 			<footer>
