--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<header>
 				<h1><b><font color="#FFFFFF">🍃2</font><font color="#00FF00">buds</font><font color="#FFFFFF">1</font><font color="#FF7F00">shroom🍄</font></b></h1>
 				<h2><font color="#FFFF00">A Soon to be Released Podcast</font></h2>
-				<h2><font color="#FFFFFF">Mental Health. <br>Psychedelic Therapy. <br> Resources & Research. <br> Harm Prevention. <br> Medicine with Intention.</font><br></h2>
+				<h2><font color="#FFFFFF">Practical Betterment of Mental Health. <br>Psychedelic Therapy as a Tool. <br> Resources & Research. <br> Harm Prevention. <br> Medicine with Intention.</font><br></h2>
 				<h3><font color="#FFFF00">These are powerful tools. Change your life carefully.</font></h3>
 			</header>
 			<nav>
