--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 		<div class="main">
 			<header>
 				<h1><b><font color="#FFFFFF">🍃2</font><font color="#00FF00">buds</font><font color="#FFFFFF">1</font><font color="#FF7F00">shroom🍄</font></b></h1>
-				<h2><font color="#FFFF00">A Soon to be Released Podcast</font></h2>
-				<h2><font color="#FFFFFF">Practical Betterment of Mental Health. <br>Psychedelic Therapy as a Tool. <br> Resources & Research. <br> Harm Prevention. <br> Medicine with Intention.</font><br></h2>
+				<h2><font color="#FFFF00" size="6">An Alternate Approach to Mental Health</font></h2>
+				<h2><font color="#FFFFFF">	Nutritional Approach to Dampen Symptoms. <br>
+											Psychedelic Therapy as a Tool. <br>
+											Supportive Community. <br> 
+											Resources & Research. <br> 
+											Medicine Used with Intention.</font><br></h2>
 				<h3><font color="#FFFF00">These are powerful tools. Change your life carefully.</font></h3>
 			</header>
 			<nav>
@@ -28,10 +32,13 @@
 				<a href="https://discord.gg/TNvB2UkH6y"><button class="button-discord"><b>#ketamine💧therapy</b></button></a>
 				<a href="https://discord.gg/VMpw7YCJHb"><button class="button-discord"><b>#psilocybin🍄</b></button></a>
 				
-				<h3><font color="#FFFF00">Spotify 🍄Psilocybin🍄 Trip Lists</font></h3>
-				<a href="https://open.spotify.com/playlist/3DfL9joUe2MwJDwjGRUki6?si=931772d3ab394e3c"><button class="button-spotify"><b>Low Vocalization (first 45 minutes)</b></button></a><br>
-				<a href="https://open.spotify.com/playlist/3G6qu3ptpDTTQoQpjNyAwW?si=355deea55d304338"><button class="button-spotify"><b>Peak Emotion for "The Trip" (minute 45 to 180)</b></button></a><br>
-				<a href="https://open.spotify.com/playlist/0sjCLbRF3diUkufd9xn5eq?si=1092239c3aa24fe0"><button class="button-spotify"><b>The Comedown (minute 181+)</b></button></a><br>
+				<h3><font color="#FFFF00">Spotify Psychedelic Therapy Trip Lists</font></h3>
+				<a href="https://open.spotify.com/playlist/3DfL9joUe2MwJDwjGRUki6?si=931772d3ab394e3c"><button class="button-spotify"><b>🍄Psilocybin - Low Vocalization (first 45 minutes)</b></button></a><br>
+				<a href="https://open.spotify.com/playlist/3G6qu3ptpDTTQoQpjNyAwW?si=355deea55d304338"><button class="button-spotify"><b>🍄Psilocybin - Peak Emotion for "The Trip" (minute 45 to 180)</b></button></a><br>
+				<a href="https://open.spotify.com/playlist/0sjCLbRF3diUkufd9xn5eq?si=1092239c3aa24fe0"><button class="button-spotify"><b>🍄Psilocybin - The Comedown (minute 181+)</b></button></a><br>
+				<a href="https://open.spotify.com/playlist/4tKQw3HDCuwSv0JVHZAGqm"><button class="button-spotify"><b>🍄Psilocybin - Max Intensity, Deep Trip Sound Matrix  - 2buds1shroom.com</b></button></a><br>
+				<a href="https://open.spotify.com/playlist/2YgVa8fv50JzMkSVAEMTh2"><button class="button-spotify"><b>🍄Psilocybin - Full Playthrough Album Experiences</b></button></a><br>
+				<a href="https://open.spotify.com/playlist/0KCcTsCJV91YMnVmObld5d"><button class="button-spotify"><b>💧Ketamine Therapy</b></button></a><br>
 				<a href="https://www.reddit.com/r/2buds1shroom/comments/1713dpx/2buds1shroom_spotify_lists_music_for_psilocybin/"><button class="button-info"><b>Info About Trip Lists</b></button></a>
 				<!-- <a href="https://paypal.me/2buds1shroom"><button class="button"><b>Support PayPal (coming soon)</b></button></a> -->
 			</nav>
